--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -90,12 +90,12 @@ jobs:
           Xvfb -ac :99 -screen 0 1280x1024x16 > /dev/null 2>&1 &
           export DISPLAY=:99.0
           EXTRA_ARGS=""
-          if [[ -n "${{ secrets.PREFERENCES }}" ]]; then
-              echo -e '${{ secrets.PREFERENCES }}' > preferences.json
+          if [[ -n '${{ secrets.PREFERENCES }}' ]]; then
+              echo '${{ secrets.PREFERENCES }}' > preferences.json
               EXTRA_ARGS+="--prefs preferences.json "
           fi
-          if [[ -n "${{ secrets.COOKIES }}" ]]; then
-              echo -e '${{ secrets.COOKIES }}' > cookies.txt
+          if [[ -n '${{ secrets.COOKIES }}' ]]; then
+              echo '${{ secrets.COOKIES }}' > cookies.txt
               EXTRA_ARGS+="--cookies cookies.txt "
           fi
           # java -jar tester.jar apk -C -D json -P -d
